--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
+# Standard .gitignore file for LoadRunner scripts
+
+# Unnecessary files added as a standard VuGen script template:
+*.sdf
+ReplaySummaryReport.xml
+ScriptUploadMetadata.xml
+ThumbnailsCache.tmp
+UserTasks.xml
+
+
+# Files created during recording:
+# Data folder contains recording snapshots and script regeneration (optional)
+# Note: may have a problem if there are any other version controlled folders 
+# called "data"
+# data/
+# lrw_custom_body.h
+
+# Files created during compilation:
+combined*.c
+CompilerLogMetadata.xml
+*.pickle
+*.ci
+*.log
+mdrv*
+options.txt
+pre_cci.c
+
+# Files created during editing in VuGen:
+Breakpoints.xml
+Bookmarks.xml
+*.bak
+# custom_body_variables.txt
+
+# Files created during script replay (definitely don't need these)
+*.idx
+result[1234567890]*/
+TransactionsData.db
+*.har
+*.shunra
+*.tmp
+
+# Custom blobs
+*.zip
+*.rar
+*.7z
+
+# output* - keep to show it working on local VuGen.
+
+# On macs only:
+.DS_Store
+
+# IDE artifacts
 .idea*
